export const snapshot = {};

snapshot[`slugify_urls plugin 1`] = `6`;

snapshot[`slugify_urls plugin 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`slugify_urls plugin 3`] = `
[
]
`;

snapshot[`slugify_urls plugin 4`] = `
{
  content: "<p>Page 2</p>
",
  data: {
    content: "Page 2
",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/chourizos-ao-vino/",
  },
  dest: {
    ext: ".html",
    path: "/chourizos-ao-vino/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/Chourizos ao viño",
    remote: undefined,
    slug: "Chourizos ao viño",
  },
}
`;

snapshot[`slugify_urls plugin 5`] = `
{
  content: "<p>Page 1</p>
",
  data: {
    content: "Page 1
",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/page-1/",
  },
  dest: {
    ext: ".html",
    path: "/page-1/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/Page 1",
    remote: undefined,
    slug: "Page 1",
  },
}
`;

snapshot[`slugify_urls plugin 6`] = `
{
  content: "Filloas con nocilla",
  data: {
    content: "Filloas con nocilla",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/filloas-con-nocilla/",
  },
  dest: {
    ext: ".html",
    path: "/filloas-con-nocilla/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.js",
    path: "/generator[0]",
    remote: undefined,
    slug: "generator",
  },
}
`;

snapshot[`slugify_urls plugin 7`] = `
{
  content: "Foo",
  data: {
    content: "Foo",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/803nfon-sfodij/-/",
  },
  dest: {
    ext: ".html",
    path: "/803nfon-sfodij/-/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.js",
    path: "/generator[1]",
    remote: undefined,
    slug: "generator",
  },
}
`;

snapshot[`slugify_urls plugin 8`] = `
{
  content: "<p>Page 3</p>
",
  data: {
    content: "Page 3
",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/paxina-numero/tres/",
  },
  dest: {
    ext: ".html",
    path: "/paxina-numero/tres/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/page-3",
    remote: undefined,
    slug: "page-3",
  },
}
`;

snapshot[`slugify_urls plugin 9`] = `
{
  content: "<p>Page 4</p>
",
  data: {
    content: "Page 4
",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/paxina-4.html",
  },
  dest: {
    ext: ".html",
    path: "/paxina-4",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/page-4",
    remote: undefined,
    slug: "page-4",
  },
}
`;
